--- a/性能度量.md
+++ b/性能度量.md
@@ -1,14 +1,86 @@
-# 硬件性能
+# 异构硬件性能度量
 
-* cpu性能
+1. ==整数运算能力==：包括加、减、乘、除、移位、逻辑操作（如 AND、OR、XOR）等操作。通常用于索引计算、地址计算、控制流判断等。由整数单元（Integer Unit，IU）或 ALU 负责执行。
 
-整数性能
+2. ==浮点运算能力==：包括小数和科学计数法的加、减、乘、除、平方根等操作，适用于科学计算、图形处理、机器学习等需要高精度计算的场景，由浮点单元（Floating Point Unit，FPU）负责执行。
 
-浮点性能
+3. 控制能力：包括分支预测、循环控制等操作。
 
-# 软件性能分析
+4. 向量和矩阵运算能力（SIMD 和 AI 加速）：
 
-==perf==可以分析软件执行的浮点和整数指令数，用于分析指令使用情况
+   > **单指令多数据（Single Instruction Multiple Data, SIMD）**：
+   >
+   > - 通过向量单元（Vector Unit）执行多个数据的并行运算。
+   > - 典型应用包括多媒体处理（如图像处理、视频编码）、科学计算、深度学习等。
+   > - 技术示例：Intel 的 AVX 指令集、ARM 的 NEON 指令集。
+   >
+   > **专用矩阵运算能力**：
+   >
+   > - 针对深度学习和 AI 应用，许多现代处理器引入了专用的矩阵乘法加速单元。
+   > - 例如，Intel 的 AMX（Advanced Matrix Extensions）、NVIDIA GPU 的 Tensor Cores。
 
-* CPU性能使用（整数与浮点比例）
+5. 专用功能（如加密、哈希）：
 
+   > 某些 CPU 提供硬件支持的加密指令集，如：
+   >
+   > - AES 加速（Intel AES-NI 指令）。
+   > - SHA-256 哈希运算。
+   >
+   > 这些加速器专为特定场景优化，能显著提升密码学应用的性能。
+
+6. ==内存能力==：内存性能直接决定了 CPU 和 DRAM 之间的数据传输速度，涉及更多的硬件模块
+
+   > **影响因素**：
+   >
+   > - CPU 设计
+   >   - 内存控制器（IMC）是否集成在 CPU 内部。
+   >   - CPU 支持的内存通道数（dual-channel, quad-channel 等）。
+   > - 内存模块
+   >   - DRAM 类型（如 DDR4, DDR5）。
+   >   - DRAM 频率和时序（如 3200 MT/s, CL16）。
+   > - 系统架构
+   >   - NUMA（非统一内存访问）架构对多 CPU 系统的影响。
+   >   - 内存总线带宽和延迟。
+   > - 软件行为
+   >   - 内存访问模式（顺序 vs 随机）。
+   >   - 使用内存的大小是否超出缓存和 DRAM 的工作集范围。
+   >
+   > **典型依赖**：
+   >
+   > 内存性能不仅与 CPU 有关，还高度依赖 DRAM 本身的规格、主板的内存插槽设计、以及 BIOS 设置（如启用 XMP 配置）。
+
+7. ==I/O能力==：IO 性能主要指 CPU 与存储设备、网络设备等外设之间的数据传输能力，这与 CPU 的关系较弱，更多受到其他硬件的限制。
+
+   > **影响因素**：
+   >
+   > - 存储设备
+   >   - 存储类型（HDD, SATA SSD, NVMe SSD）。
+   >   - 控制器速度（如 PCIe Gen3 vs Gen4）。
+   > - 网络设备
+   >   - 网卡类型（千兆网卡 vs 万兆网卡）。
+   >   - 网络协议栈效率（TCP/IP Offload）。
+   > - 总线设计
+   >   - PCIe 通道数和带宽。
+   >   - CPU 与芯片组之间的通信能力。
+   > - 软件与协议
+   >   - 操作系统的 IO 调度策略。
+   >   - 文件系统和存储协议（如 ext4 vs XFS，iSCSI vs NVMe-oF）。
+   >
+   > **典型依赖**：
+   >
+   > IO 性能与 CPU 的关系更多体现在：
+   >
+   > - CPU 是否支持高级 IO 技术（如 DMA、NVMe 协议加速）。
+   > - CPU 核心是否过载，导致 IO 操作延迟增加。
+
+# 软件性能表征分析
+
+分析软件对不同硬件性能依赖的权重
+
+* 第一种用perf去分析，类似白盒分析
+
+* 第二种基于混沌工程分析，类似黑盒分析。
+
+  机器剩余性能（机器总资源-混沌工程程序占用资源）
+
+  
